Implemented AutoMapper with DataTransferObject
